refactor(metadata): address PR review on LanguageNormalizer and its tests