@@ -13,17 +13,15 @@ import java.util.regex.Pattern;
 @UtilityClass
 public class LanguageNormalizer {
 
-    public static String normalize(String input) {
+    private static final Pattern BCP47_SEPARATOR = Pattern.compile("[-_]");
+
+    public String normalize(String input) {
         if (input == null || input.isBlank()) {
             return null;
         }
         String trimmed = input.trim();
 
-        // BCP 47 / IETF tags ("fr-FR", "fr_FR") — take primary subtag first
-        String primary = trimmed;
-        if (trimmed.contains("-") || trimmed.contains("_")) {
-            primary = trimmed.split("[-_]")[0];
-        }
+        String primary = BCP47_SEPARATOR.split(trimmed)[0];
 
         String result = resolveCode(primary);
         if (result == null && !primary.equals(trimmed)) {
@@ -33,7 +31,7 @@ public class LanguageNormalizer {
         return result != null ? result : trimmed.toLowerCase(Locale.ROOT).strip();
     }
 
-    private static String resolveCode(String input) {
+    private String resolveCode(String input) {
         LanguageCode byCode = LanguageCode.getByCode(input, false);
         if (byCode != null) return byCode.name();
 
@@ -44,7 +42,7 @@ public class LanguageNormalizer {
         }
 
         List<LanguageCode> byName = LanguageCode.findByName("(?i)" + Pattern.quote(input));
-        if (!byName.isEmpty()) return byName.get(0).name();
+        if (!byName.isEmpty()) return byName.getFirst().name();
 
         return LocalizedNameMap.MAP.get(input.toLowerCase(Locale.ROOT).trim());
     }
@@ -54,14 +52,14 @@ public class LanguageNormalizer {
 
         private static Map<String, String> build() {
             Locale[] displayLocales = {
-                Locale.FRENCH, Locale.GERMAN, Locale.ITALIAN,
-                new Locale("es"), new Locale("pt"), new Locale("nl"),
-                new Locale("ru"), new Locale("pl"), new Locale("ja")
+                Locale.of("fr"), Locale.of("de"), Locale.of("it"), Locale.of("ja"),
+                Locale.of("es"), Locale.of("pt"), Locale.of("nl"),
+                Locale.of("ru"), Locale.of("pl")
             };
             Map<String, String> map = new HashMap<>();
             for (LanguageCode code : LanguageCode.values()) {
                 if (code == LanguageCode.undefined) continue;
-                Locale locale = new Locale(code.name());
+                Locale locale = Locale.of(code.name());
                 for (Locale displayLocale : displayLocales) {
                     String displayName = locale.getDisplayLanguage(displayLocale).toLowerCase(Locale.ROOT);
                     if (displayName.length() > 2) {
